Kube-Ingress/name-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: biradar-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  - host: "grocery.biradar.shop"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: shop-svc
            port:
              number: 80
  - host: "watch.biradar.shop"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: watch-svc
            port:
              number: 80
